# deightma

./: .gitignore  setup_everything.bat
.github/workflows/: github-actions.yml
Client/: Client.sln  DistributedSystemWebClient.cs  Program.cs
Cluster/: buildimages.bat  docker-compose.yml  launch_nodes.bat  stop_and_delete_all_containers.bat
Cluster/Coordinator/: Coordinator.http  Coordinator.sln
Cluster/Master/: Dockerfile  Dockerfile-opt  Helper.cs  Master.csproj  Master.http  Master.sln  Program.cs
Cluster/Master/Properties/: launchSettings.json
Cluster/Node_cs/: ApiConfig.cs  Dockerfile  GetRequests.cs  NodeBehavior.cs  Node_cs.http  Node_cs.sln  Program.cs  buildimages.bat  docker-compose.debug.yml  docker-compose.yml
Cluster/Node_cs/Dockerfiles/aot/: Dockerfile  Dockerfile-deb
Cluster/Node_cs/Dockerfiles/rt/: Dockerfile
Cluster/Node_cs/Properties/: launchSettings.json
Cluster/bicubic_interpolation_service/: Cargo.toml  Dockerfile
Cluster/bicubic_interpolation_service/src/: calculations.rs  debug.rs  main.rs
Cluster/coordinator/: Cargo.toml  Dockerfile
Cluster/coordinator/src/: balancing.rs  communication.rs  deal_with_nodes.rs  get_requests.rs  main.rs  post_requests.rs  state.rs
Cluster/hasher_service/: Cargo.toml  Dockerfile
Cluster/hasher_service/src/: main.rs
Cluster/node_rs/: Cargo.toml  Dockerfile
Cluster/node_rs/src/: main.rs
Cluster/vueWebUI/: Dockerfile  README.md  package-lock.json  package.json
Cluster/vueWebUI/src/: App.vue
Cluster/vueWebUI/src/assets/: base.css
Cluster/vueWebUI/src/components/: HelloWorld.vue  ResultDisplaySidebar.vue  SVGMap.vue
Cluster/vueWebUICluster/: Dockerfile  package-lock.json  package.json
Cluster/vueWebUICluster/src/: App.vue
Cluster/vueWebUICluster/src/assets/: base.css  main.css
Cluster/vueWebUICluster/src/components/: SVGMap.vue
Cluster/web/: Cargo.toml  Dockerfile  Trunk.toml  index.html
Cluster/web/src/: main.rs
deploy/: deploy-bicubic_interpolation_service.yaml  deploy-coordinator.yaml  deploy-hasher_service.yaml  deploy-master.yaml  deploy-nodes.yaml  deploy-webUI.yaml  headless-service.yaml
