[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"


[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.3"
rand = "0.8.5"
rustc-hash = "1.1.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = "1.37.0"
