[package]
name = "hasher_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
actix-web = "4.6.0"
rustc-hash = "1.1.0"
serde = "1.0.202"
serde_derive = "1.0.202"
