[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.11.0"
gloo-net = "0.5.0"
log = "0.4.21"
pulldown-cmark = { version = "0.9", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = "0.3.69"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
